// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcDropdown multiple value props should enable search when isSearchEnabled is set to true 1`] = `
<li
  class="ec-dropdown-search__search-area"
>
  <svg
    class="ec-dropdown-search__search-icon ec-icon"
  >
    <use
      xlink:href="#ec-simple-search"
    />
  </svg>
   
  <input
    autocomplete="off"
    class="ec-dropdown-search__search-input"
    placeholder="Search..."
  />
</li>
`;

exports[`EcDropdown multiple value props should get disabled when disabled prop is set 1`] = `
<div
  class="ec-dropdown-search ec-dropdown"
  data-test="ec-dropdown"
>
  <div
    class="ec-dropdown-search__trigger"
    data-popover-stub=""
    disabled="disabled"
    offset="8"
    placement="bottom"
    popoverinnerclass="ec-dropdown-search__popover"
    popperoptions="[object Object]"
  >
    <div
      class="ec-input-field"
    >
      <!---->
       
      <input
        class="ec-input-field__input ec-input-field__input--has-icon"
        data-test="ec-dropdown__input"
        disabled="disabled"
        id="ec-input-field-217"
        placeholder=""
        readonly="readonly"
        type="text"
      />
       
      <div
        class="ec-input-field__icon-wrapper"
      >
        <svg
          class="ec-input-field__icon ec-icon"
          height="24"
          width="24"
        >
          <use
            xlink:href="#ec-simple-arrow-drop-down"
          />
        </svg>
      </div>
       
      <!---->
    </div>
     
    <div>
      <ul
        class="ec-dropdown-search__item-list"
      >
        <!---->
         
        <!---->
         
        <!---->
         
      </ul>
    </div>
  </div>
</div>
`;

exports[`EcDropdown multiple value props should pass errorMessage prop to the triggering input 1`] = `undefined`;

exports[`EcDropdown multiple value props should pass label prop to the triggering input 1`] = `
<label
  class="ec-input-field__label"
  for="ec-input-field-179"
>
  Random label
</label>
`;

exports[`EcDropdown multiple value props should use placeholder prop 1`] = `
<input
  class="ec-input-field__input ec-input-field__input--has-icon"
  data-test="ec-dropdown__input"
  id="ec-input-field-204"
  placeholder="Random placeholder"
  readonly="readonly"
  type="text"
/>
`;

exports[`EcDropdown multiple value props should use searchPlaceholder prop if search is enabled 1`] = `
<li
  class="ec-dropdown-search__search-area"
>
  <svg
    class="ec-dropdown-search__search-icon ec-icon"
  >
    <use
      xlink:href="#ec-simple-search"
    />
  </svg>
   
  <input
    autocomplete="off"
    class="ec-dropdown-search__search-input"
    placeholder="Random search placeholder"
  />
</li>
`;

exports[`EcDropdown multiple value should render as expected 1`] = `
<div
  class="ec-dropdown-search ec-dropdown"
  data-test="ec-dropdown"
>
  <div
    class="ec-dropdown-search__trigger"
    data-popover-stub=""
    offset="8"
    placement="bottom"
    popoverinnerclass="ec-dropdown-search__popover"
    popperoptions="[object Object]"
  >
    <div
      class="ec-input-field"
    >
      <!---->
       
      <input
        class="ec-input-field__input ec-input-field__input--has-icon"
        data-test="ec-dropdown__input"
        id="ec-input-field-117"
        placeholder=""
        readonly="readonly"
        type="text"
      />
       
      <div
        class="ec-input-field__icon-wrapper"
      >
        <svg
          class="ec-input-field__icon ec-icon"
          height="24"
          width="24"
        >
          <use
            xlink:href="#ec-simple-arrow-drop-down"
          />
        </svg>
      </div>
       
      <!---->
    </div>
     
    <div>
      <ul
        class="ec-dropdown-search__item-list"
      >
        <!---->
         
        <!---->
         
        <!---->
         
      </ul>
    </div>
  </div>
</div>
`;

exports[`EcDropdown multiple value should render checkbox for each item 1`] = `
<ul
  class="ec-dropdown-search__item-list"
>
  <!---->
   
  <!---->
   
  <!---->
   
  <li
    class="ec-dropdown-search__item"
    title="Item 1"
  >
    <div
      class="ec-checkbox ec-dropdown__multiple-item"
    >
      <input
        class="ec-checkbox__input"
        id="ec-checkbox-137"
        type="checkbox"
      />
       
      <div
        class="ec-checkbox__label-checkbox-wrapper "
      >
        <span
          class="ec-checkbox__check-icon-wrapper"
        >
          <!---->
        </span>
         
        <label
          class="ec-checkbox__label"
          for="ec-checkbox-137"
        >
          <div
            class="ec-dropdown__multiple-item-label"
          >
            Item 1
          </div>
        </label>
      </div>
       
      <!---->
    </div>
  </li>
  <li
    class="ec-dropdown-search__item"
    title="Item 2"
  >
    <div
      class="ec-checkbox ec-dropdown__multiple-item"
    >
      <input
        class="ec-checkbox__input"
        id="ec-checkbox-138"
        type="checkbox"
      />
       
      <div
        class="ec-checkbox__label-checkbox-wrapper "
      >
        <span
          class="ec-checkbox__check-icon-wrapper"
        >
          <!---->
        </span>
         
        <label
          class="ec-checkbox__label"
          for="ec-checkbox-138"
        >
          <div
            class="ec-dropdown__multiple-item-label"
          >
            Item 2
          </div>
        </label>
      </div>
       
      <!---->
    </div>
  </li>
  <li
    class="ec-dropdown-search__item"
    title="Item 3"
  >
    <div
      class="ec-checkbox ec-dropdown__multiple-item"
    >
      <input
        class="ec-checkbox__input"
        id="ec-checkbox-139"
        type="checkbox"
      />
       
      <div
        class="ec-checkbox__label-checkbox-wrapper "
      >
        <span
          class="ec-checkbox__check-icon-wrapper"
        >
          <!---->
        </span>
         
        <label
          class="ec-checkbox__label"
          for="ec-checkbox-139"
        >
          <div
            class="ec-dropdown__multiple-item-label"
          >
            Item 3
          </div>
        </label>
      </div>
       
      <!---->
    </div>
  </li>
  <li
    class="ec-dropdown-search__item ec-dropdown-search__item--is-disabled ec-has-tooltip"
    data-original-title="Item 4"
  >
    <div
      class="ec-checkbox ec-dropdown__multiple-item"
    >
      <input
        class="ec-checkbox__input"
        disabled="disabled"
        id="ec-checkbox-140"
        type="checkbox"
      />
       
      <div
        class="ec-checkbox__label-checkbox-wrapper "
      >
        <span
          class="ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--disabled"
        >
          <!---->
        </span>
         
        <label
          class="ec-checkbox__label"
          for="ec-checkbox-140"
        >
          <div
            class="ec-dropdown__multiple-item-label ec-dropdown__multiple-item-label--is-disabled"
          >
            Item 4
          </div>
        </label>
      </div>
       
      <!---->
    </div>
  </li>
  <li
    class="ec-dropdown-search__item"
    title="Item 5"
  >
    <div
      class="ec-checkbox ec-dropdown__multiple-item"
    >
      <input
        class="ec-checkbox__input"
        id="ec-checkbox-141"
        type="checkbox"
      />
       
      <div
        class="ec-checkbox__label-checkbox-wrapper "
      >
        <span
          class="ec-checkbox__check-icon-wrapper"
        >
          <!---->
        </span>
         
        <label
          class="ec-checkbox__label"
          for="ec-checkbox-141"
        >
          <div
            class="ec-dropdown__multiple-item-label"
          >
            Item 5
          </div>
        </label>
      </div>
       
      <!---->
    </div>
  </li>
</ul>
`;

exports[`EcDropdown multiple value should render preselected checkbox for each selected item 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -16,11 +16,11 @@
        <!---->
         
        <input
          class=\\"ec-input-field__input ec-input-field__input--has-icon\\"
          data-test=\\"ec-dropdown__input\\"
-         id=\\"ec-input-field-146\\"
+         id=\\"ec-input-field-157\\"
          placeholder=\\"\\"
          readonly=\\"readonly\\"
          type=\\"text\\"
        />
         
@@ -58,26 +58,34 @@
            <div
              class=\\"ec-checkbox ec-dropdown__multiple-item\\"
            >
              <input
                class=\\"ec-checkbox__input\\"
-               id=\\"ec-checkbox-148\\"
+               id=\\"ec-checkbox-159\\"
                type=\\"checkbox\\"
              />
               
              <div
                class=\\"ec-checkbox__label-checkbox-wrapper \\"
              >
                <span
-                 class=\\"ec-checkbox__check-icon-wrapper\\"
+                 class=\\"ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--checked\\"
                >
-                 <!---->
+                 <svg
+                   class=\\"ec-checkbox__check-icon ec-icon\\"
+                   height=\\"16\\"
+                   width=\\"16\\"
+                 >
+                   <use
+                     xlink:href=\\"#ec-simple-check\\"
+                   />
+                 </svg>
                </span>
                 
                <label
                  class=\\"ec-checkbox__label\\"
-                 for=\\"ec-checkbox-148\\"
+                 for=\\"ec-checkbox-159\\"
                >
                  <div
                    class=\\"ec-dropdown__multiple-item-label\\"
                  >
                    Item 1
@@ -95,26 +103,34 @@
            <div
              class=\\"ec-checkbox ec-dropdown__multiple-item\\"
            >
              <input
                class=\\"ec-checkbox__input\\"
-               id=\\"ec-checkbox-149\\"
+               id=\\"ec-checkbox-161\\"
                type=\\"checkbox\\"
              />
               
              <div
                class=\\"ec-checkbox__label-checkbox-wrapper \\"
              >
                <span
-                 class=\\"ec-checkbox__check-icon-wrapper\\"
+                 class=\\"ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--checked\\"
                >
-                 <!---->
+                 <svg
+                   class=\\"ec-checkbox__check-icon ec-icon\\"
+                   height=\\"16\\"
+                   width=\\"16\\"
+                 >
+                   <use
+                     xlink:href=\\"#ec-simple-check\\"
+                   />
+                 </svg>
                </span>
                 
                <label
                  class=\\"ec-checkbox__label\\"
-                 for=\\"ec-checkbox-149\\"
+                 for=\\"ec-checkbox-161\\"
                >
                  <div
                    class=\\"ec-dropdown__multiple-item-label\\"
                  >
                    Item 2
@@ -132,26 +148,34 @@
            <div
              class=\\"ec-checkbox ec-dropdown__multiple-item\\"
            >
              <input
                class=\\"ec-checkbox__input\\"
-               id=\\"ec-checkbox-150\\"
+               id=\\"ec-checkbox-163\\"
                type=\\"checkbox\\"
              />
               
              <div
                class=\\"ec-checkbox__label-checkbox-wrapper \\"
              >
                <span
-                 class=\\"ec-checkbox__check-icon-wrapper\\"
+                 class=\\"ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--checked\\"
                >
-                 <!---->
+                 <svg
+                   class=\\"ec-checkbox__check-icon ec-icon\\"
+                   height=\\"16\\"
+                   width=\\"16\\"
+                 >
+                   <use
+                     xlink:href=\\"#ec-simple-check\\"
+                   />
+                 </svg>
                </span>
                 
                <label
                  class=\\"ec-checkbox__label\\"
-                 for=\\"ec-checkbox-150\\"
+                 for=\\"ec-checkbox-163\\"
                >
                  <div
                    class=\\"ec-dropdown__multiple-item-label\\"
                  >
                    Item 3
@@ -170,26 +194,34 @@
              class=\\"ec-checkbox ec-dropdown__multiple-item\\"
            >
              <input
                class=\\"ec-checkbox__input\\"
                disabled=\\"disabled\\"
-               id=\\"ec-checkbox-151\\"
+               id=\\"ec-checkbox-165\\"
                type=\\"checkbox\\"
              />
               
              <div
                class=\\"ec-checkbox__label-checkbox-wrapper \\"
              >
                <span
-                 class=\\"ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--disabled\\"
+                 class=\\"ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--checked ec-checkbox__check-icon-wrapper--disabled ec-checkbox__check-icon-wrapper--checked-and-disabled\\"
+               >
+                 <svg
+                   class=\\"ec-checkbox__check-icon ec-icon\\"
+                   height=\\"16\\"
+                   width=\\"16\\"
                  >
-                 <!---->
+                   <use
+                     xlink:href=\\"#ec-simple-check\\"
+                   />
+                 </svg>
                </span>
                 
                <label
                  class=\\"ec-checkbox__label\\"
-                 for=\\"ec-checkbox-151\\"
+                 for=\\"ec-checkbox-165\\"
                >
                  <div
                    class=\\"ec-dropdown__multiple-item-label ec-dropdown__multiple-item-label--is-disabled\\"
                  >
                    Item 4
@@ -207,26 +239,34 @@
            <div
              class=\\"ec-checkbox ec-dropdown__multiple-item\\"
            >
              <input
                class=\\"ec-checkbox__input\\"
-               id=\\"ec-checkbox-152\\"
+               id=\\"ec-checkbox-167\\"
                type=\\"checkbox\\"
              />
               
              <div
                class=\\"ec-checkbox__label-checkbox-wrapper \\"
              >
                <span
-                 class=\\"ec-checkbox__check-icon-wrapper\\"
+                 class=\\"ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--checked\\"
+               >
+                 <svg
+                   class=\\"ec-checkbox__check-icon ec-icon\\"
+                   height=\\"16\\"
+                   width=\\"16\\"
                  >
-                 <!---->
+                   <use
+                     xlink:href=\\"#ec-simple-check\\"
+                   />
+                 </svg>
                </span>
                 
                <label
                  class=\\"ec-checkbox__label\\"
-                 for=\\"ec-checkbox-152\\"
+                 for=\\"ec-checkbox-167\\"
                >
                  <div
                    class=\\"ec-dropdown__multiple-item-label\\"
                  >
                    Item 5"
`;

exports[`EcDropdown multiple value should render readonly input as a trigger 1`] = `
<input
  class="ec-input-field__input ec-input-field__input--has-icon"
  data-test="ec-dropdown__input"
  id="ec-input-field-123"
  placeholder=""
  readonly="readonly"
  type="text"
/>
`;

exports[`EcDropdown multiple value slots should forward CTA slot 1`] = `
<li
  class="ec-dropdown-search__cta-area"
>
  <button>
    My CTA
  </button>
</li>
`;

exports[`EcDropdown multiple value slots should forward item slot 1`] = `
<ul
  class="ec-dropdown-search__item-list"
>
  <!---->
   
  <!---->
   
  <!---->
   
  <li
    class="ec-dropdown-search__item"
    title="Item 1"
  >
    <div>
      (0) Item 1
    </div>
  </li>
  <li
    class="ec-dropdown-search__item"
    title="Item 2"
  >
    <div>
      (1) Item 2
    </div>
  </li>
  <li
    class="ec-dropdown-search__item"
    title="Item 3"
  >
    <div>
      (2) Item 3
    </div>
  </li>
  <li
    class="ec-dropdown-search__item ec-dropdown-search__item--is-disabled ec-has-tooltip"
    data-original-title="Item 4"
  >
    <div>
      (3) Item 4
    </div>
  </li>
  <li
    class="ec-dropdown-search__item"
    title="Item 5"
  >
    <div>
      (4) Item 5
    </div>
  </li>
</ul>
`;

exports[`EcDropdown single value props should enable search when isSearchEnabled is set to true 1`] = `
<li
  class="ec-dropdown-search__search-area"
>
  <svg
    class="ec-dropdown-search__search-icon ec-icon"
  >
    <use
      xlink:href="#ec-simple-search"
    />
  </svg>
   
  <input
    autocomplete="off"
    class="ec-dropdown-search__search-input"
    placeholder="Search..."
  />
</li>
`;

exports[`EcDropdown single value props should get disabled when disabled prop is set 1`] = `
<div
  class="ec-dropdown-search ec-dropdown"
  data-test="ec-dropdown"
>
  <div
    class="ec-dropdown-search__trigger"
    data-popover-stub=""
    disabled="disabled"
    offset="8"
    placement="bottom"
    popoverinnerclass="ec-dropdown-search__popover"
    popperoptions="[object Object]"
  >
    <div
      class="ec-input-field"
    >
      <!---->
       
      <input
        class="ec-input-field__input ec-input-field__input--has-icon"
        data-test="ec-dropdown__input"
        disabled="disabled"
        id="ec-input-field-66"
        placeholder=""
        readonly="readonly"
        type="text"
      />
       
      <div
        class="ec-input-field__icon-wrapper"
      >
        <svg
          class="ec-input-field__icon ec-icon"
          height="24"
          width="24"
        >
          <use
            xlink:href="#ec-simple-arrow-drop-down"
          />
        </svg>
      </div>
       
      <!---->
    </div>
     
    <div>
      <ul
        class="ec-dropdown-search__item-list"
      >
        <!---->
         
        <!---->
         
        <!---->
         
      </ul>
    </div>
  </div>
</div>
`;

exports[`EcDropdown single value props should pass errorMessage prop to the triggering input 1`] = `undefined`;

exports[`EcDropdown single value props should pass label prop to the triggering input 1`] = `
<label
  class="ec-input-field__label"
  for="ec-input-field-28"
>
  Random label
</label>
`;

exports[`EcDropdown single value props should use placeholder prop 1`] = `
<input
  class="ec-input-field__input ec-input-field__input--has-icon"
  data-test="ec-dropdown__input"
  id="ec-input-field-53"
  placeholder="Random placeholder"
  readonly="readonly"
  type="text"
/>
`;

exports[`EcDropdown single value props should use searchPlaceholder prop if search is enabled 1`] = `
<li
  class="ec-dropdown-search__search-area"
>
  <svg
    class="ec-dropdown-search__search-icon ec-icon"
  >
    <use
      xlink:href="#ec-simple-search"
    />
  </svg>
   
  <input
    autocomplete="off"
    class="ec-dropdown-search__search-input"
    placeholder="Random search placeholder"
  />
</li>
`;

exports[`EcDropdown single value should render as expected 1`] = `
<div
  class="ec-dropdown-search ec-dropdown"
  data-test="ec-dropdown"
>
  <div
    class="ec-dropdown-search__trigger"
    data-popover-stub=""
    offset="8"
    placement="bottom"
    popoverinnerclass="ec-dropdown-search__popover"
    popperoptions="[object Object]"
  >
    <div
      class="ec-input-field"
    >
      <!---->
       
      <input
        class="ec-input-field__input ec-input-field__input--has-icon"
        data-test="ec-dropdown__input"
        id="ec-input-field-4"
        placeholder=""
        readonly="readonly"
        type="text"
      />
       
      <div
        class="ec-input-field__icon-wrapper"
      >
        <svg
          class="ec-input-field__icon ec-icon"
          height="24"
          width="24"
        >
          <use
            xlink:href="#ec-simple-arrow-drop-down"
          />
        </svg>
      </div>
       
      <!---->
    </div>
     
    <div>
      <ul
        class="ec-dropdown-search__item-list"
      >
        <!---->
         
        <!---->
         
        <!---->
         
      </ul>
    </div>
  </div>
</div>
`;

exports[`EcDropdown single value should render readonly input as a trigger 1`] = `
<input
  class="ec-input-field__input ec-input-field__input--has-icon"
  data-test="ec-dropdown__input"
  id="ec-input-field-10"
  placeholder=""
  readonly="readonly"
  type="text"
/>
`;

exports[`EcDropdown single value slots should forward CTA slot 1`] = `
<li
  class="ec-dropdown-search__cta-area"
>
  <button>
    My CTA
  </button>
</li>
`;

exports[`EcDropdown single value slots should forward item slot 1`] = `
<ul
  class="ec-dropdown-search__item-list"
>
  <!---->
   
  <!---->
   
  <!---->
   
  <li
    class="ec-dropdown-search__item"
    title="Item 1"
  >
    <div>
      (0) Item 1
    </div>
  </li>
  <li
    class="ec-dropdown-search__item"
    title="Item 2"
  >
    <div>
      (1) Item 2
    </div>
  </li>
  <li
    class="ec-dropdown-search__item"
    title="Item 3"
  >
    <div>
      (2) Item 3
    </div>
  </li>
  <li
    class="ec-dropdown-search__item ec-dropdown-search__item--is-disabled ec-has-tooltip"
    data-original-title="Item 4"
  >
    <div>
      (3) Item 4
    </div>
  </li>
  <li
    class="ec-dropdown-search__item"
    title="Item 5"
  >
    <div>
      (4) Item 5
    </div>
  </li>
</ul>
`;
